tdf#120691 Migrate tables which contain spaces

Change-Id: I115d765bc781a926189605990e91c8e47f24d474
Reviewed-on: https://gerrit.libreoffice.org/62403
Tested-by: Jenkins
Reviewed-by: Tamás Bunth <btomi96@gmail.com>
(cherry picked from commit 76279399f747548494a259173ef5669553c3f06f)
Reviewed-on: https://gerrit.libreoffice.org/62501
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>